--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "url_shortner",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon app.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "consolidate": "^0.16.0",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "typescript": "^5.0.4"
+    "sqlite3": "^5.1.6",
+    "swig": "^1.4.2"
   }
 }
