--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon app.js"
   },
+  "type": "module",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clipboardy": "^3.0.0",
     "consolidate": "^0.16.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
